# r6-status-monitor

./: Cargo.toml  README.md  settings.json
src/: main.rs
src/api/: mod.rs  status_check.rs
src/controller/: states.rs
src/discord/: webhook.rs
src/models/: mod.rs  statuses.rs
