[package]
name = "r6-status-monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.4"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
tokio = { version = "1", features = ["full"] }
